--- a/db_dynamodb.yml
+++ b/db_dynamodb.yml
@@ -1,30 +1,30 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "DynamoDB Table mínima para pruebas"
+Description: "DynamoDB Table mínima para productos de la compra"
 
 Parameters:
   TableName:
     Type: String
-    Default: tickets
+    Default: products
     Description: DynamoDB table Name
 
 Resources:
-  TicketsTable:
+  ProductsTable:
     Type: AWS::DynamoDB::Table
     Properties:
       TableName: !Ref TableName
       AttributeDefinitions:
-        - AttributeName: ticket_id
+        - AttributeName: product_id
           AttributeType: S
       KeySchema:
-        - AttributeName: ticket_id
+        - AttributeName: product_id
           KeyType: HASH
       BillingMode: PAY_PER_REQUEST
 
 Outputs:
   TableName:
     Description: DynamoDB table name
-    Value: !Ref TicketsTable
+    Value: !Ref ProductsTable
 
   TableArn:
     Description: ARN DynamoDB table
-    Value: !GetAtt TicketsTable.Arn
+    Value: !GetAtt ProductsTable.Arn
