--- a/main.yml
+++ b/main.yml
@@ -5,7 +5,7 @@ Parameters:
   ImageName:
     Type: String
     Description: ECR Image Name
-    Default: tickets-app:latest
+    Default: products-app:latest
 
   VpcId:
     Type: AWS::EC2::VPC::Id
@@ -17,7 +17,7 @@ Parameters:
 
   DBDynamoName:
     Type: String
-    Default: "tickets"
+    Default: "products"
     Description: DynamoDB table name
 
 # ============================================================================
@@ -41,7 +41,7 @@ Resources:
   NLB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Name: tickets-nlb
+      Name: products-nlb
       Type: network
       Scheme: internal
       Subnets: !Ref SubnetIds
@@ -49,7 +49,7 @@ Resources:
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: tickets-tg
+      Name: products-tg
       Port: 8080
       Protocol: TCP
       VpcId: !Ref VpcId
@@ -73,12 +73,12 @@ Resources:
   ECSCluster:
     Type: AWS::ECS::Cluster
     Properties:
-      ClusterName: tickets-cluster
+      ClusterName: products-cluster
 
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
-      Family: tickets-task
+      Family: products-task
       NetworkMode: awsvpc
       RequiresCompatibilities:
         - FARGATE
@@ -87,7 +87,7 @@ Resources:
       ExecutionRoleArn: !Sub "arn:aws:iam::${AWS::AccountId}:role/LabRole"
       TaskRoleArn: !Sub "arn:aws:iam::${AWS::AccountId}:role/LabRole"
       ContainerDefinitions:
-        - Name: tickets-container
+        - Name: products-container
           Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ImageName}"
           PortMappings:
             - ContainerPort: 8080
@@ -95,9 +95,9 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: /ecs/tickets
+              awslogs-group: /ecs/products
               awslogs-region: !Ref AWS::Region
-              awslogs-stream-prefix: tickets
+              awslogs-stream-prefix: products
               awslogs-create-group: "true"
           Environment:
             - Name: DB_DYNAMONAME
@@ -109,7 +109,7 @@ Resources:
       - Listener
     Properties:
       Cluster: !Ref ECSCluster
-      ServiceName: tickets-service
+      ServiceName: products-service
       TaskDefinition: !Ref TaskDefinition
       DesiredCount: 1
       LaunchType: FARGATE
@@ -120,7 +120,7 @@ Resources:
           SecurityGroups:
             - !Ref ECSSecurityGroup
       LoadBalancers:
-        - ContainerName: tickets-container
+        - ContainerName: products-container
           ContainerPort: 8080
           TargetGroupArn: !Ref TargetGroup
 
@@ -130,15 +130,15 @@ Resources:
   VPCLink:
     Type: AWS::ApiGateway::VpcLink
     Properties:
-      Name: tickets-vpc-link
+      Name: products-vpc-link
       TargetArns:
         - !Ref NLB
 
   RestAPI:
     Type: AWS::ApiGateway::RestApi
     Properties:
-      Name: tickets-api
-      Description: API para gestión de tickets
+      Name: products-api
+      Description: API para gestión de productos
 
   ItemsResource:
     Type: AWS::ApiGateway::Resource
@@ -318,14 +318,14 @@ Resources:
   APIKey:
     Type: AWS::ApiGateway::ApiKey
     Properties:
-      Name: tickets-api-key
+      Name: products-api-key
       Enabled: true
 
   UsagePlan:
     Type: AWS::ApiGateway::UsagePlan
     DependsOn: APIStage
     Properties:
-      UsagePlanName: tickets-usage-plan
+      UsagePlanName: products-usage-plan
       ApiStages:
         - ApiId: !Ref RestAPI
           Stage: !Ref APIStage
