--- a/main.yml
+++ b/main.yml
@@ -35,7 +35,7 @@ Resources:
           ToPort: 8080
           CidrIp: 172.31.0.0/16
 
-  EndpointSecurityGroup: # <-- NUEVO RECURSO
+  EndpointSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: SG for VPC Endpoints
